Microfix hw_1.ipynb
fix: In printinfo() method was written previous metric - accuracy. Edited to F-1 score

--- a/hw_1/hw_1.ipynb
+++ b/hw_1/hw_1.ipynb
@@ -160,7 +160,7 @@
    "outputs": [],
    "source": [
     "def print_info(vectorizer, model, mean_acc, std):\n",
-    "    print(f\"{model.__class__.__name__} - {vectorizer.__class__.__name__}| accuracy: {mean_acc} | std: {std}\")"
+    "    print(f\"{model.__class__.__name__} - {vectorizer.__class__.__name__}| F-1 score: {mean_acc} | std: {std}\")"
    ]
   },
   {
@@ -172,12 +172,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CountVectorizer - DecisionTreeClassifier| accuracy: 0.8113843101879391 | std: 0.0734539358983156\n",
-      "TfidfVectorizer - DecisionTreeClassifier| accuracy: 0.7981017653375025 | std: 0.09197458226015737\n",
-      "CountVectorizer - LogisticRegression| accuracy: 0.9577944756456105 | std: 0.05234733230790628\n",
-      "TfidfVectorizer - LogisticRegression| accuracy: 0.9412557724697919 | std: 0.03414918679302613\n",
-      "CountVectorizer - MultinomialNB| accuracy: 0.9467730629572838 | std: 0.030265750652902816\n",
-      "TfidfVectorizer - MultinomialNB| accuracy: 0.5441161507918728 | std: 0.10771507567246275\n"
+      "CountVectorizer - DecisionTreeClassifier| F-1 score: 0.8113843101879391 | std: 0.0734539358983156\n",
+      "TfidfVectorizer - DecisionTreeClassifier| F-1 score: 0.7981017653375025 | std: 0.09197458226015737\n",
+      "CountVectorizer - LogisticRegression| F-1 score: 0.9577944756456105 | std: 0.05234733230790628\n",
+      "TfidfVectorizer - LogisticRegression| F-1 score: 0.9412557724697919 | std: 0.03414918679302613\n",
+      "CountVectorizer - MultinomialNB| F-1 score: 0.9467730629572838 | std: 0.030265750652902816\n",
+      "TfidfVectorizer - MultinomialNB| F-1 score: 0.5441161507918728 | std: 0.10771507567246275\n"
      ]
     }
    ],
