--- a/hw_1/hw_1.ipynb
+++ b/hw_1/hw_1.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV, RepeatedKFold\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import sklearn\n",
+    "import numpy as np\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -69,14 +87,12 @@
        "4   in adding cream to spaghetti carbonara which ...      0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "data = pd.read_csv('spam_or_not_spam.csv')\n",
     "data.head(5)"
    ]
@@ -90,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,26 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score, GridSearchCV, RepeatedKFold\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "import sklearn\n",
-    "import numpy as np\n",
-    "\n",
     "sklearn.random.seed(42)\n",
     "np.random.seed(42)\n",
     "\n",
     "vectorizer1 = CountVectorizer(stop_words='english')\n",
     "vectorizer2 = TfidfVectorizer(stop_words='english')\n",
     "\n",
-    "model1 = DecisionTreeClassifier(class_weight='balanced')\n",
-    "model2 = LogisticRegression(max_iter=1000, class_weight='balanced')\n",
+    "model1 = DecisionTreeClassifier(class_weight='balanced', random_state=42)\n",
+    "model2 = LogisticRegression(max_iter=1000, class_weight='balanced', random_state=42)\n",
     "model3 = MultinomialNB()\n",
     "\n",
     "vectorizers = [vectorizer1, vectorizer2]\n",
@@ -127,30 +135,7 @@
     "\n",
     "model_grids = {'DecisionTreeClassifier': {'ccp_alpha': [0, 0.5, 1]},\n",
     "               'LogisticRegression': {'C': [1, 1.5, 2]},\n",
-    "               'MultinomialNB': {'alpha': [1, 1.5, 2]}}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def TestModelAndVectorizer(vectorizer, model):\n",
-    "    X = vectorizer.fit_transform(list(data['email'])).toarray() \n",
-    "    y = np.array(data['label'].to_list())\n",
-    "    grid = model_grids[model.__class__.__name__]\n",
-    "    \n",
-    "    cvFold = RepeatedKFold(n_splits=3, n_repeats=3, random_state=1)\n",
-    "    gridSearch = GridSearchCV(estimator=model, param_grid=grid, n_jobs=3,\n",
-    "\tcv=cvFold, scoring=\"f1\")\n",
-    "    # use f1-score because of having unbalanced classes\n",
-    "    searchResults = gridSearch.fit(X, y)\n",
-    "    bestModel = searchResults.best_estimator_\n",
-    "    scores = cross_val_score(bestModel, X, y, cv=10, n_jobs=10, scoring='f1') \n",
-    "    \n",
-    "    return bestModel, scores.mean(), scores.std()"
+    "               'MultinomialNB': {'alpha': [1, 1.5, 2]}}\n"
    ]
   },
   {
@@ -159,25 +144,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_info(vectorizer, model, mean_acc, std):\n",
-    "    print(f\"{model.__class__.__name__} - {vectorizer.__class__.__name__}| accuracy: {mean_acc} | std: {std}\")"
+    "def TestModelAndVectorizer(vectorizer, model):\n",
+    "    X = np.array(data['email'].to_list()) \n",
+    "    y = np.array(data['label'].to_list())\n",
+    "    grid = model_grids[model.__class__.__name__]\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(X, y, test_size=0.33, random_state=42)\n",
+    "    \n",
+    "    X_train = vectorizer.fit_transform(X_train)\n",
+    "    X_test = vectorizer.transform(X_test)\n",
+    "    \n",
+    "    gridSearch = GridSearchCV(estimator=model, param_grid=grid, n_jobs=3,\n",
+    "\tcv=3, scoring=\"f1\")\n",
+    "    # use f1-score because of having unbalanced classes\n",
+    "    searchResults = gridSearch.fit(X_train, y_train)\n",
+    "    \n",
+    "    \n",
+    "    bestModel = searchResults.best_estimator_\n",
+    "    scores = cross_val_score(bestModel, X_test, y_test, cv=10, n_jobs=10, scoring='f1') \n",
+    "    \n",
+    "    return bestModel, scores.mean(), scores.std()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_info(model, vectorizer, mean_acc, std):\n",
+    "    print(f\"{model.__class__.__name__} - {vectorizer.__class__.__name__}| accuracy: {mean_acc} | std: {std}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CountVectorizer - DecisionTreeClassifier| accuracy: 0.8113843101879391 | std: 0.0734539358983156\n",
-      "TfidfVectorizer - DecisionTreeClassifier| accuracy: 0.7981017653375025 | std: 0.09197458226015737\n",
-      "CountVectorizer - LogisticRegression| accuracy: 0.9577944756456105 | std: 0.05234733230790628\n",
-      "TfidfVectorizer - LogisticRegression| accuracy: 0.9412557724697919 | std: 0.03414918679302613\n",
-      "CountVectorizer - MultinomialNB| accuracy: 0.9467730629572838 | std: 0.030265750652902816\n",
-      "TfidfVectorizer - MultinomialNB| accuracy: 0.5441161507918728 | std: 0.10771507567246275\n"
+      "DecisionTreeClassifier - CountVectorizer| accuracy: 0.7798348390559193 | std: 0.06336291513788574\n",
+      "DecisionTreeClassifier - TfidfVectorizer| accuracy: 0.7061599960868266 | std: 0.07734290364046824\n",
+      "LogisticRegression - CountVectorizer| accuracy: 0.9460672392124005 | std: 0.042171396344804296\n",
+      "LogisticRegression - TfidfVectorizer| accuracy: 0.9124472116685688 | std: 0.04584759688061759\n",
+      "MultinomialNB - CountVectorizer| accuracy: 0.9071537819799778 | std: 0.06453416263085482\n",
+      "MultinomialNB - TfidfVectorizer| accuracy: 0.18871345029239767 | std: 0.0941088310249275\n"
      ]
     }
    ],
@@ -195,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,16 +217,13 @@
        "['bestModel.pkl']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import joblib\n",
-    "\n",
     "joblib.dump(bestModel, 'bestModel.pkl', compress=3)\n",
-    "\n",
     "# model = joblib.load('bestModel.pkl')"
    ]
   }
