--- a/hw_1/hw_1.ipynb
+++ b/hw_1/hw_1.ipynb
@@ -171,8 +171,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_info(model, vectorizer, mean_acc, std):\n",
-    "    print(f\"{model.__class__.__name__} - {vectorizer.__class__.__name__}| accuracy: {mean_acc} | std: {std}\")"
+    "def print_info(model, vectorizer, score, std):\n",
+    "    print(f\"{model.__class__.__name__} - {vectorizer.__class__.__name__}| f1-score: {score} | std: {std}\")"
    ]
   },
   {
@@ -184,12 +184,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassifier - CountVectorizer| accuracy: 0.7798348390559193 | std: 0.06336291513788574\n",
-      "DecisionTreeClassifier - TfidfVectorizer| accuracy: 0.7061599960868266 | std: 0.07734290364046824\n",
-      "LogisticRegression - CountVectorizer| accuracy: 0.9460672392124005 | std: 0.042171396344804296\n",
-      "LogisticRegression - TfidfVectorizer| accuracy: 0.9124472116685688 | std: 0.04584759688061759\n",
-      "MultinomialNB - CountVectorizer| accuracy: 0.9071537819799778 | std: 0.06453416263085482\n",
-      "MultinomialNB - TfidfVectorizer| accuracy: 0.18871345029239767 | std: 0.0941088310249275\n"
+      "DecisionTreeClassifier - CountVectorizer| f1-score: 0.7798348390559193 | std: 0.06336291513788574\n",
+      "DecisionTreeClassifier - TfidfVectorizer| f1-score: 0.7061599960868266 | std: 0.07734290364046824\n",
+      "LogisticRegression - CountVectorizer| f1-score: 0.9460672392124005 | std: 0.042171396344804296\n",
+      "LogisticRegression - TfidfVectorizer| f1-score: 0.9124472116685688 | std: 0.04584759688061759\n",
+      "MultinomialNB - CountVectorizer| f1-score: 0.9071537819799778 | std: 0.06453416263085482\n",
+      "MultinomialNB - TfidfVectorizer| f1-score: 0.18871345029239767 | std: 0.0941088310249275\n"
      ]
     }
    ],
